# blue-whale-voice-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
app/: __init__.py  agent.py  config.py  database.py  logging.py  main.py  plate.py  prompts.py  schemas.py  sql.py
app/cli/: wechat_test.py
app/services/: __init__.py  browser_session.py  guard_agent.py  stt.py  tts.py  twilio_handler.py  wechat.py
app/tools/: __init__.py
docs/: TESTING.md  architecture.html
docs/deploy/: aliyun-deploy-sop.md  icp-filing-sop.md
docs/evidence/: README.md  stress-test-5x.json  stress-test-5x.md
docs/pptx/output/: voice-agent-defense.pptx  voice-agent-take-home.pptx
scripts/: build_defense_ppt.py  build_ppt.py  clone_voice.py  measure_25s.py  run_server.sh  seed_db.py  setup_named_tunnel.sh  start_public.sh  stress.py  stress_browser.py  stress_report.json  stress_report.md  stress_test.py  test_call_local.py
static/: browser_test.html  clone_voice.html
tests/: conftest.py  test_agent.py  test_plate.py  test_schemas.py  test_wechat.py
wechat-miniprogram/: README.md  app.js  app.json
wechat-miniprogram/drop-in/voice-checkin/: INTEGRATE.md  voice-checkin.js  voice-checkin.json  voice-checkin.wxml  voice-checkin.wxss
wechat-miniprogram/pages/index/: index.js  index.json  index.wxml  index.wxss
